kubernetes-streaming-platform/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ginflix
  labels:
    name: ginflix
