kubernetes-streaming-platform/06-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: ginflix
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: backend
        image: registry.gin-telecom.ovh/ginflix/backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
# Service Backend
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: ginflix
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: backend
